@@ -14862,6 +14862,8 @@ class LeafletContextMenu extends L$1.Handler
     _show(e)
     {
         this._showAtPoint(e.containerPoint, e);
+
+        this._map.fire('contextmenu.show');
     }
 
     _showAtPoint(point, data)
