@@ -14865,6 +14865,8 @@ var LeafletContextMenu = (function () {
 	    _show(e)
 	    {
 	        this._showAtPoint(e.containerPoint, e);
+
+	        this._map.fire('contextmenu.show');
 	    }
 
 	    _showAtPoint(point, data)
