@@ -339,6 +339,8 @@ export default class LeafletContextMenu extends L.Handler
     _show(e)
     {
         this._showAtPoint(e.containerPoint, e);
+
+        this._map.fire('contextmenu.show');
     }
 
     _showAtPoint(point, data)
